samples/_failures_safe/1761455968_0d1e2b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a705d373.c: In function ‘print_token’:
./samples/SAFE/__tmp_a705d373.c:158:12: error: missing terminating " character
  158 |     printf("Line %d, Column %d: %s (%s)\n
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_a705d373.c:158:5: error: expected expression at end of input
  158 |     printf("Line %d, Column %d: %s (%s)\n
      |     ^~~~~~
./samples/SAFE/__tmp_a705d373.c:158:5: error: expected declaration or statement at end of input
